fixed bug causing unability to travel gate when DHD is open and/or menu overlaps the gate

--- a/frontend/src/styles/chat.scss
+++ b/frontend/src/styles/chat.scss
@@ -15,6 +15,7 @@
   color: white;
   border-radius: 4px;
   filter: opacity(0%);
+  pointer-events: auto;
 
   &.open {
     transform: translateY(0%);
