--- a/frontend/src/styles/user/menu.scss
+++ b/frontend/src/styles/user/menu.scss
@@ -10,6 +10,7 @@
   align-items: flex-start;
   z-index: 20;
   transition: 500ms;
+  pointer-events: none;
 
   &.dhdOpened {
     transform: translateY(-100%);
@@ -25,6 +26,7 @@
     margin: 0 4px;
     height: 100%;
     width: 100%;
+    pointer-events: none;
   }
 
   .navMenu {
@@ -36,6 +38,8 @@
     flex-direction: column;
 
     &.right {
+      pointer-events: auto;
+
       .navButton {
         border-right: none;
         border-radius: 12px 0 0 12px;
@@ -48,6 +52,8 @@
     }
 
     &.left {
+      pointer-events: auto;
+
       .navButton {
         border-left: none;
         border-radius: 0 12px 12px 0;
